# skillsswap

./: .env.example  .env.prod.example  .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_05_05_0001_initial_base_infrastructure.py  2025_05_05_0002_user_and_mentor_profile.py  2025_05_06_0003_topic_and_embedding_tables.py  2025_05_07_0004_mentorship_meeting_messaging_review.py  2025_05_08_0005_report_and_block.py  2025_05_28_0006_add_pg_trgm_extension.py  2025_06_05_0007_audit_log_and_user_banned_at.py
backend/app/: main.py
backend/app/api/: admin.py  debug.py  me.py  meetings.py  mentors.py  mentorships.py  recommendations.py  reports.py  topics.py  users.py
backend/app/core/: admin.py  auth.py  config.py  rate_limit.py  redis.py  security.py  validators.py
backend/app/db/: __init__.py  base.py  dependencies.py  session.py
backend/app/recommender/: __init__.py  embeddings.py  search.py
backend/app/schemas/: __init__.py  admin.py  audit_log.py  auth.py  meeting.py  mentor_profile.py  mentorship.py  message.py  recommendation.py  report.py  review.py  topic.py  user.py
backend/scripts/: backfill_embeddings.py  seed_test_mentors.py  seed_topics.py  test_recommendations.py
backend/tests/: conftest.py  test_auth.py  test_embeddings.py  test_meetings.py  test_mentorship_endpoints.py  test_mentorship_meeting_review.py  test_messaging.py  test_moderation.py  test_recommendations.py  test_recommendations_endpoint.py  test_reviews.py  test_topics.py  test_url_validator.py  test_user_model.py
(+66 files in other folders)
